--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -11,13 +11,10 @@
 
 .nft_polygon {
 	position: relative;
-	// top: 17.5px;
-	// left: 23px;
 	clip-path: polygon(0 22px, 0 65px, 212px 65px, 254px 43px, 254px 0, 42px 0);
 	width: 254px;
 	height: 65px;
 	background: linear-gradient(-272.52deg, #FFA6FA 47.49%, #3C79D5 98.81%);
-	box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
 	border-bottom-left-radius: 5px;
 	border-top-right-radius: 5px;
 }
@@ -52,3 +49,35 @@
 	}
 }
 // Hero EXPLORE button - END
+
+// Hero PLACE BID button - START
+.nft_hero_placebid {
+	font: {
+		family: $font_rajdhani;
+		size: calc(17.69rem / 16);
+		weight: 600;
+	}
+
+	padding: 3px 8px 0 10px;
+
+	&_btn {
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
+		border-radius: 2.21px;
+		border: none;
+		outline: none;
+		padding: 0;
+		align-items: center;
+
+		&_border {
+			width: 119.39px;
+			height: 37.59px;
+			background: linear-gradient(104deg, #3C79D4 0%, #FFA6FA 100%);
+			margin-top: 20px;
+			padding: 2.21px;
+			border-radius: 2.21px;
+		}
+	}
+}
+// Hero PLACE BID button - END
