--- a/assets/styles/layout/_hero.scss
+++ b/assets/styles/layout/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
 	margin-top: 105px;
+	color: rgb(255, 255, 255);
 
   	h1 {
-		color: rgb(255, 255, 255);
 		line-height: 137.4%;
 
 		font: {
@@ -21,8 +21,6 @@
 	}
 
 	p {
-		color: rgb(255, 255, 255);
-		
 		&.nft_intro {
 			line-height: calc(44rem / 16);
 			margin: 21px 0 43px 0;
@@ -82,5 +80,20 @@ a.nft_create {
 
 .nft_counter_border_right {
 	border-right: solid 1px rgba(255, 255, 255, 0.26);
+}
+
+.nft_hero_bid_mask {
+	width: 401.28px;
+	height: 477.33px;
+	filter: drop-shadow(0 3px 3px rgba(0, 0, 0, 1));
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		mask-size: cover;
+		-webkit-mask-size: cover;
+		mask-image: url('../img/mask_hero.svg');
+	}
 }
 
