--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,9 +40,9 @@ span.nft_brand {
 
 .hero {
   margin-top: 105px;
+  color: rgb(255, 255, 255);
 }
 .hero h1 {
-  color: rgb(255, 255, 255);
   line-height: 137.4%;
   font-family: "League Spartan", sans-serif;
   font-size: 4.125rem;
@@ -54,9 +54,6 @@ span.nft_brand {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
-}
-.hero p {
-  color: rgb(255, 255, 255);
 }
 .hero p.nft_intro {
   line-height: 2.75rem;
@@ -102,6 +99,22 @@ a.nft_create:hover {
   border-right: solid 1px rgba(255, 255, 255, 0.26);
 }
 
+.nft_hero_bid_mask {
+  width: 401.28px;
+  height: 477.33px;
+  filter: drop-shadow(0 3px 3px rgb(0, 0, 0));
+}
+.nft_hero_bid_mask img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  mask-size: cover;
+  -webkit-mask-size: cover;
+  -webkit-mask-image: url("../img/mask_hero.svg");
+          mask-image: url("../img/mask_hero.svg");
+}
+
 .nft_polygon_shadow {
   float: left;
   margin: -17.5px 0 0 -23px;
@@ -119,7 +132,6 @@ a.nft_create:hover {
   width: 254px;
   height: 65px;
   background: linear-gradient(-272.52deg, #FFA6FA 47.49%, #3C79D5 98.81%);
-  box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -153,6 +165,128 @@ a.nft_create:hover {
   font-weight: 700;
 }
 
+.nft_hero_placebid {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.105625rem;
+  font-weight: 600;
+  padding: 3px 8px 0 10px;
+}
+.nft_hero_placebid_btn {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
+  border-radius: 2.21px;
+  border: none;
+  outline: none;
+  padding: 0;
+  align-items: center;
+}
+.nft_hero_placebid_btn_border {
+  width: 119.39px;
+  height: 37.59px;
+  background: linear-gradient(104deg, #3C79D4 0%, #FFA6FA 100%);
+  margin-top: 20px;
+  padding: 2.21px;
+  border-radius: 2.21px;
+}
+
+.nft_hero_bid_shadow {
+  float: right;
+  margin: -140px 0 0 0;
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  background-color: rgba(255, 86, 246, 0.51);
+  filter: blur(70px);
+  z-index: -1;
+}
+.nft_hero_bid {
+  position: absolute;
+  width: 336px;
+  height: 181px;
+  top: 360px;
+  right: 0;
+  -webkit-clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
+          clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
+  background: linear-gradient(110deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  border-bottom-left-radius: 8.84px;
+  border-bottom-right-radius: 8.84px;
+  border-top-right-radius: 8.84px;
+}
+.nft_hero_bid1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  right: 0;
+  -webkit-clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
+          clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
+  background: linear-gradient(90deg, rgb(255, 255, 255) -1.52%, rgba(255, 255, 255, 0.24) 104.35%);
+  filter: opacity(10%);
+  padding: 28px 21px 20px 23px;
+  border-bottom-left-radius: 14.144px;
+  border-bottom-right-radius: 14.144px;
+  border-top-right-radius: 14.144px;
+}
+.nft_hero_bid_details {
+  position: absolute;
+  bottom: 108px;
+  right: 21px;
+  margin: 0;
+  width: 292px;
+  height: 134px;
+}
+.nft_hero_artname {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.105625rem;
+  font-weight: 700;
+  line-height: 2.210625rem;
+}
+.nft_hero_nickname {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.9675rem;
+  font-weight: 600;
+  line-height: 2.210625rem;
+}
+.nft_hero_theme_title {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.690625rem;
+  font-weight: 600;
+  line-height: 2.210625rem;
+  margin: 10px 0 -10px 0;
+}
+.nft_hero_logo_ethereum {
+  margin-left: -4px;
+}
+.nft_hero_price_ethereum {
+  font-family: "Orbitron", sans-serif;
+  font-size: 0.6075rem;
+  font-weight: 700;
+  padding-left: 2px;
+  padding-right: 6px;
+}
+.nft_hero_price_usd {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.690625rem;
+  font-weight: 400;
+}
+.nft_hero_auction_time {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.105625rem;
+  font-weight: 600;
+  line-height: 2.210625rem;
+  margin: -10px 0 0 0;
+}
+.nft_hero_auction_time_unit {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.690625rem;
+  font-weight: 500;
+  line-height: 2.210625rem;
+  margin: -17px 0 0 0;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -162,4 +296,9 @@ body {
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+a.nft_nodecor_white {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
