--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'components/buttons';
 @import 'components/carousel';
 @import 'components/dropdown';
+@import 'components/itemdetails';
 
 @import 'pages/home';
 
