--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -202,41 +202,38 @@ a.nft_create:hover {
 }
 .nft_hero_bid {
   position: absolute;
-  width: 336px;
-  height: 181px;
   top: 360px;
   right: 0;
+  width: 336px;
+  height: 181px;
   -webkit-clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
           clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
   background: linear-gradient(110deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
+  z-index: 0;
   border-bottom-left-radius: 8.84px;
   border-bottom-right-radius: 8.84px;
   border-top-right-radius: 8.84px;
 }
 .nft_hero_bid1 {
-  position: absolute;
   width: 100%;
   height: 100%;
-  bottom: 0;
-  right: 0;
   -webkit-clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
           clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
-  background: linear-gradient(90deg, rgb(255, 255, 255) -1.52%, rgba(255, 255, 255, 0.24) 104.35%);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) -1.52%, rgba(255, 255, 255, 0.24) 104.35%);
   filter: opacity(10%);
   padding: 28px 21px 20px 23px;
+  z-index: 1;
   border-bottom-left-radius: 14.144px;
   border-bottom-right-radius: 14.144px;
   border-top-right-radius: 14.144px;
 }
 .nft_hero_bid_details {
-  position: absolute;
-  bottom: 108px;
-  right: 21px;
   margin: 0;
   width: 292px;
   height: 134px;
+  z-index: 2;
 }
 .nft_hero_artname {
   font-family: "Rajdhani", sans-serif;
