--- a/assets/styles/themes/_theme.scss
+++ b/assets/styles/themes/_theme.scss
@@ -16,3 +16,8 @@ a.nft_nodecor_white {
 	color: rgba(255, 255, 255, 1);
 	text-decoration: none;
 }
+
+.nft_partners {
+	filter: opacity(50%);
+	margin: 100px 0 200px 0;
+}
