--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -81,3 +81,33 @@
 	}
 }
 // Hero PLACE BID button - END
+
+// NFT Top Now PLACE BID button - START
+.nft_topnow_placebid {
+	font: {
+		family: $font_rajdhani;
+		size: calc(23.04rem / 16);
+		weight: 600;
+	}
+
+	padding: 3px 12px 0 10px;
+
+	&_btn {
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
+		border: none;
+		outline: none;
+		padding: 0;
+		align-items: center;
+
+		&_border {
+			width: 155.52px;
+			height: 48.96px;
+			background: linear-gradient(104deg, #3C79D4 0%, #FFA6FA 100%);
+			margin-top: 20px;
+			padding: 2.21px;
+		}
+	}
+}
+// NFT Top Now PLACE BID button - END
