--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -115,6 +115,14 @@ a.nft_create:hover {
           mask-image: url("../img/mask_hero.svg");
 }
 
+.nft_partners {
+  filter: opacity(50%);
+  margin: 100px 0 200px 0;
+}
+.nft_partners img {
+  max-width: 100%;
+}
+
 .nft_polygon_shadow {
   float: left;
   margin: -17.5px 0 0 -23px;
@@ -188,6 +196,29 @@ a.nft_create:hover {
   margin-top: 20px;
   padding: 2.21px;
   border-radius: 2.21px;
+}
+
+.nft_topnow_placebid {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.44rem;
+  font-weight: 600;
+  padding: 3px 12px 0 10px;
+}
+.nft_topnow_placebid_btn {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
+  border: none;
+  outline: none;
+  padding: 0;
+  align-items: center;
+}
+.nft_topnow_placebid_btn_border {
+  width: 155.52px;
+  height: 48.96px;
+  background: linear-gradient(104deg, #3C79D4 0%, #FFA6FA 100%);
+  margin-top: 20px;
+  padding: 2.21px;
 }
 
 .nft_hero_bid_shadow {
@@ -284,6 +315,83 @@ a.nft_create:hover {
   margin: -17px 0 0 0;
 }
 
+.nft_topnow img {
+  max-width: 437.76px;
+  max-height: auto;
+}
+.nft_topnow_bid_border {
+  width: 100%;
+  height: auto;
+  padding: 2.88px;
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0));
+}
+.nft_topnow_bid_details {
+  position: relative;
+  margin: 0;
+  padding: 20px;
+  overflow: hidden;
+}
+.nft_topnow_bid_details:before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0.24));
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  filter: blur(10px) opacity(0.2);
+  margin: -20px;
+}
+.nft_topnow_artname {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.44rem;
+  font-weight: 700;
+  line-height: 2.88rem;
+}
+.nft_topnow_nickname {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.26rem;
+  font-weight: 600;
+  line-height: 2.88rem;
+}
+.nft_topnow_theme_title {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  line-height: 2.88rem;
+  margin: 10px 0 -10px 0;
+}
+.nft_topnow_logo_ethereum {
+  margin-left: -4px;
+}
+.nft_topnow_price_ethereum {
+  font-family: "Orbitron", sans-serif;
+  font-size: 0.79125rem;
+  font-weight: 700;
+  padding-left: 2px;
+  padding-right: 6px;
+}
+.nft_topnow_price_usd {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+.nft_topnow_auction_time {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 1.44rem;
+  font-weight: 600;
+  line-height: 2.88rem;
+  margin: -10px 0 0 0;
+}
+.nft_topnow_auction_time_unit {
+  font-family: "Rajdhani", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 500;
+  line-height: 2.88rem;
+  margin: -17px 0 0 0;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -300,10 +408,15 @@ a.nft_nodecor_white {
   text-decoration: none;
 }
 
-.nft_partners {
-  filter: opacity(50%);
-  margin: 100px 0 200px 0;
+.nft_white {
+  color: rgb(255, 255, 255);
 }
-.nft_partners img {
-  max-width: 100%;
+
+h2,
+span.nft_view_all {
+  color: rgb(255, 255, 255);
+  margin: 0;
+  font-family: "Orbitron", sans-serif;
+  font-size: 1.658125rem;
+  font-weight: 700;
 }/*# sourceMappingURL=main.css.map */
