--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,6 +13,8 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/hero';
+@import 'layout/partners';
+@import 'layout/top-nft-now';
 @import 'layout/footer';
 @import 'layout/forms';
 
