--- a/frozen_style.css
+++ b/frozen_style.css
@@ -48,6 +48,15 @@ body {
 	border-width: 4px;
 	border-style: solid;
 	border-image: linear-gradient(to right, rgba(0, 0, 139, .5), rgba(153, 50, 204, .5)) 1;
+
+	/* Should provide inner border radius, but doesn't work with current shape */
+	/* background: 
+		linear-gradient(var(--color-bg), var(--color-bg)) padding-box,
+		linear-gradient(to right, darkblue, darkorchid) border-box;
+	border-radius: 10px;
+	border: 4px solid transparent;
+
+	filter: opacity(.5); */
 }
 
 .polygon_gradient::before {
@@ -58,13 +67,22 @@ body {
 	height: 231px;
 	left: 0;
 	top: 0;
-	filter: opacity(0.5);
+	filter: opacity(.5);
+}
+
+.polygon_gradient::after {
+	position: absolute;
+	content: '';
+	width: 80px;
+	height: 4px;
+	top: 15px;
+	left: -17px;
+	transform: rotate(-45deg);
+	background: rgba(0, 0, 139, .45);
 }
 
 .content {
 	position: absolute;
-	/* top: 15px;
-	left: 15px; */
 	padding: 15px;
 }
 
