--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -104,16 +104,6 @@ a.nft_create:hover {
   height: 477.33px;
   filter: drop-shadow(0 3px 3px rgb(0, 0, 0));
 }
-.nft_hero_bid_mask img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  mask-size: cover;
-  -webkit-mask-size: cover;
-  -webkit-mask-image: url("../img/mask_hero.svg");
-          mask-image: url("../img/mask_hero.svg");
-}
 
 .nft_partners {
   filter: opacity(50%);
@@ -139,7 +129,7 @@ a.nft_create:hover {
           clip-path: polygon(0 22px, 0 65px, 212px 65px, 254px 43px, 254px 0, 42px 0);
   width: 254px;
   height: 65px;
-  background: linear-gradient(-272.52deg, #FFA6FA 47.49%, #3C79D5 98.81%);
+  background: linear-gradient(to right, #FFA6FA 47.49%, #3C79D5 98.81%);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -152,11 +142,18 @@ a.nft_create:hover {
   left: 0;
   -webkit-clip-path: polygon(2px 23px, 2px 63px, 211px 63px, 252px 42px, 252px 2px, 42px 2px);
           clip-path: polygon(2px 23px, 2px 63px, 211px 63px, 252px 42px, 252px 2px, 42px 2px);
-  background: linear-gradient(92.23deg, #406AFF 0%, #3BACE2 0%, #B936EE 50%, #FF56F6 79%);
+  background: linear-gradient(to right, #406AFF 0%, #3BACE2 0%, #B936EE 50%, #FF56F6 79%);
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
   display: flex;
   text-align: right;
+}
+.nft_polygon1:hover {
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
+  transform: translate3d(0, 0, 0);
+  background-size: 200% 200%;
+  transition: 0.5s;
 }
 
 .nft_explore {
@@ -189,6 +186,13 @@ a.nft_create:hover {
   padding: 0;
   align-items: center;
 }
+.nft_hero_placebid_btn:hover {
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
+  transform: translate3d(0, 0, 0);
+  background-size: 200% 200%;
+  transition: 0.5s;
+}
 .nft_hero_placebid_btn_border {
   width: 119.39px;
   height: 37.59px;
@@ -213,6 +217,13 @@ a.nft_create:hover {
   padding: 0;
   align-items: center;
 }
+.nft_topnow_placebid_btn:hover {
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
+  transform: translate3d(0, 0, 0);
+  background-size: 200% 200%;
+  transition: 0.5s;
+}
 .nft_topnow_placebid_btn_border {
   width: 155.52px;
   height: 48.96px;
@@ -221,6 +232,29 @@ a.nft_create:hover {
   padding: 2.21px;
 }
 
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .nft_hero_bid_shadow {
   float: right;
   margin: -140px 0 0 0;
@@ -231,40 +265,72 @@ a.nft_create:hover {
   filter: blur(70px);
   z-index: -1;
 }
-.nft_hero_bid {
-  position: absolute;
-  top: 360px;
-  right: 0;
+.nft_hero_bid_polygon_blured {
   width: 336px;
   height: 181px;
+  background: inherit;
+  border-radius: 8px;
+  position: absolute;
   -webkit-clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
           clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
-  background: linear-gradient(110deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-  z-index: 0;
-  border-bottom-left-radius: 8.84px;
-  border-bottom-right-radius: 8.84px;
-  border-top-right-radius: 8.84px;
+  overflow: hidden;
+  top: 360px;
+  right: 0;
 }
-.nft_hero_bid1 {
-  width: 100%;
-  height: 100%;
-  -webkit-clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
-          clip-path: polygon(2px 47px, 2px 179px, 334px 179px, 334px 2px, 47px 2px);
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) -1.52%, rgba(255, 255, 255, 0.24) 104.35%);
-  filter: opacity(10%);
-  padding: 28px 21px 20px 23px;
-  z-index: 1;
-  border-bottom-left-radius: 14.144px;
-  border-bottom-right-radius: 14.144px;
-  border-top-right-radius: 14.144px;
+.nft_hero_bid_polygon_blured::before {
+  position: absolute;
+  content: "";
+  background: inherit;
+  width: 336px;
+  height: 181px;
+  box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
+  filter: blur(10px);
+  border-radius: 8px;
+  -webkit-clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
+          clip-path: polygon(0 46px, 0 181px, 336px 181px, 336px 0, 46px 0);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
-.nft_hero_bid_details {
+.nft_hero_bid_polygon_gradient {
+  position: absolute;
+  width: 335px;
+  height: 181px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-clip-path: polygon(0 46px, 0 181px, 335px 181px, 335px 0, 46px 0);
+          clip-path: polygon(0 46px, 0 181px, 335px 181px, 335px 0, 46px 0);
+  border-width: 2px;
+  border-style: solid;
+  -o-border-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0)) 1;
+     border-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0)) 1;
+}
+.nft_hero_bid_polygon_gradient::before {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, rgba(153, 50, 204, 0.5), rgba(255, 255, 255, 0.2));
+  width: 335px;
+  height: 181px;
+  left: 0;
+  top: 0;
+  filter: opacity(0.5);
+}
+.nft_hero_bid_content {
   margin: 0;
   width: 292px;
   height: 134px;
-  z-index: 2;
+  z-index: 1;
+}
+.nft_hero_bid_content::before {
+  position: absolute;
+  content: "";
+  width: 65px;
+  height: 2px;
+  top: 21px;
+  left: -11px;
+  transform: rotate(-45deg);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.28));
 }
 .nft_hero_artname {
   font-family: "Rajdhani", sans-serif;
@@ -316,32 +382,57 @@ a.nft_create:hover {
 }
 
 .nft_topnow img {
-  max-width: 437.76px;
-  max-height: auto;
-}
-.nft_topnow_bid_border {
-  width: 100%;
+  max-width: 438px;
   height: auto;
-  padding: 2.88px;
-  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0));
 }
-.nft_topnow_bid_details {
+.nft_topnow_bid_blured {
+  width: 100%;
+  height: 236px;
+  background: inherit;
   position: relative;
-  margin: 0;
-  padding: 20px;
   overflow: hidden;
 }
-.nft_topnow_bid_details:before {
-  content: "";
+.nft_topnow_bid_blured::before {
   position: absolute;
+  content: "";
+  background: inherit;
+  width: 488px;
+  height: 286px;
+  top: -25px;
+  left: -25px;
+  box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
+  filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+.nft_topnow_bid_gradient {
+  position: absolute;
+  width: 438px;
+  height: 236px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-width: 3px;
+  border-style: solid;
+  -o-border-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0)) 1;
+     border-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.28), rgba(255, 255, 255, 0)) 1;
+}
+.nft_topnow_bid_gradient::before {
+  position: absolute;
+  content: "";
   background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0.24));
-  z-index: -1;
-  top: 0;
+  width: 488px;
+  height: 286px;
   left: 0;
-  right: 0;
-  bottom: 0;
-  filter: blur(10px) opacity(0.2);
-  margin: -20px;
+  top: 0;
+  filter: opacity(0.1);
+}
+.nft_topnow_bid_content {
+  position: absolute;
+  width: 100%;
+  margin: 0;
+  padding: 20px;
 }
 .nft_topnow_artname {
   font-family: "Rajdhani", sans-serif;
@@ -395,11 +486,16 @@ a.nft_create:hover {
 body {
   width: 100%;
   height: 100%;
-  padding: 2.2% 0;
   background-color: rgb(1, 32, 76);
   background-image: url("../img/bg.jpg");
   background-position: center top;
   background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header {
+  background-image: url(../img/bg.jpg);
+  background-position: center top;
   background-size: cover;
 }
 
