--- a/assets/styles/themes/_theme.scss
+++ b/assets/styles/themes/_theme.scss
@@ -1,14 +1,21 @@
 body {
 	width: 100%;
 	height: 100%;
-	padding: 2.2% 0;
-
 	background: {
 		color: rgb(1, 32, 76);
 		image: url('../img/bg.jpg');
 		// image: url('../img/bg_hero.png');
 		position: center top;
 		repeat: no-repeat;
+		size: cover;
+		// attachment: fixed;
+	}
+}
+
+header {
+	background: {
+		image: url(../img/bg.jpg);
+		position: center top;
 		size: cover;
 	}
 }
@@ -26,7 +33,6 @@ h2,
 span.nft_view_all {
 	color: rgba(255, 255, 255, 1);
 	margin: 0;
-
 	font: {
 		family: $font_orbitron;
 		size: calc(26.53rem / 16);
