--- a/assets/styles/components/_itemdetails.scss
+++ b/assets/styles/components/_itemdetails.scss
@@ -158,34 +158,35 @@
 // NFT Top Now Bid Description Details END
 .nft_topnow {
 	img {
-		max-width: 438px;
-		height: auto;
+		max-width: 420px;
 	}
 
 	&_bid_blured {
-		width: 100%;
+		width: 420px;
 		height: 236px;
-		background: inherit;
+		// background: inherit;
 		position: relative;
-		overflow: hidden;
+		// overflow: hidden;
 
 		&::before {
 			position: absolute;
 			content: '';
-			background: inherit;
-			width: 488px;
-			height: 286px;
-			top: -25px;
-			left: -25px;
-			box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
-			filter: blur(5px);
-			backdrop-filter: blur(5px);
+			// background: inherit;
+			width: 420px;
+			height: 236px;
+			// top: -25px;
+			// left: -25px;
+			// box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
+			// filter: blur(5px);
+			backdrop-filter: blur(10px);
 		}
 	}
 
 	&_bid_gradient {
 		position: absolute;
-		width: 438px;
+		// top: 0;
+		// left: 0;
+		width: 420px;
 		height: 236px;
 		overflow: hidden;
 		display: flex;
@@ -199,11 +200,11 @@
 			position: absolute;
 			content: '';
 			background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.24));
-			width: 488px;
-			height: 286px;
-			left: 0;
-			top: 0;
-			filter: opacity(0.1);
+			width: 430px;
+			height: 246px;
+			left: -5px;
+			top: -5px;
+			filter: opacity(0.2);
 		}
 	}
 
@@ -211,7 +212,7 @@
 		position: absolute;
 		width: 100%;
 		margin: 0;
-		padding: 20px;
+		padding: 15px;
 	}
 
 	&_artname {
