--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -255,6 +255,10 @@ a.nft_create:hover {
     background-position: 0% 50%;
   }
 }
+.nft_hero_bid_mask svg {
+  width: 402px;
+  height: 478px;
+}
 .nft_hero_bid_shadow {
   float: right;
   margin: -140px 0 0 0;
@@ -475,6 +479,16 @@ a.nft_create:hover {
   margin: -17px 0 0 0;
 }
 
+@media screen and (max-width: 992px) {
+  .nft_hero_bid_mask svg {
+    width: 334px;
+  }
+  .nft_hero_bid_polygon_blured {
+    left: 55%;
+    top: 77%;
+    transform: translate(-45%, -23%);
+  }
+}
 body {
   width: 100%;
   height: 100%;
